[gd_scene load_steps=16 format=3 uid="uid://bnwnhyivagje6"]

[ext_resource type="Script" path="res://scripts/jogador.gd" id="1_khgi0"]
[ext_resource type="Texture2D" uid="uid://ci0ndsmlxxjja" path="res://sprites/Archaeologist Sprite Sheet.png" id="1_tx3uc"]
[ext_resource type="Texture2D" uid="uid://eby1o14dq4o5" path="res://sprites/orb2.png" id="3_vu7w4"]

[sub_resource type="Animation" id="Animation_enylg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ispu1"]
resource_name = "mover"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_l5gmy"]
resource_name = "parado"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_bmsdu"]
resource_name = "morrer"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pjio7"]
_data = {
"RESET": SubResource("Animation_enylg"),
"morrer": SubResource("Animation_bmsdu"),
"mover": SubResource("Animation_ispu1"),
"parado": SubResource("Animation_l5gmy")
}

[sub_resource type="Animation" id="Animation_y7tey"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kltlw"]
resource_name = "dano"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.2), Vector2(1.1, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pltvy"]
_data = {
"RESET": SubResource("Animation_y7tey"),
"dano": SubResource("Animation_kltlw")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_b5qiu"]
radius = 6.0

[sub_resource type="GDScript" id="GDScript_8k5n3"]
script/source = "extends Node2D

@onready var sprite = $sprite

func _process(delta):
	sprite.rotate(12 * delta)
	get_parent().rotate(6 * delta)

func _on_areaHit_body_entered(body):
	if body.is_in_group(\"inimigo\"):
		body.addHit(1)
"

[sub_resource type="Gradient" id="Gradient_4ivth"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_8wvw7"]
radius = 12.0

[node name="jogador" type="CharacterBody2D" groups=["jogador"]]
collision_layer = 2
script = ExtResource("1_khgi0")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_tx3uc")
offset = Vector2(0, -13)
hframes = 8
vframes = 7

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "parado"
libraries = {
"": SubResource("AnimationLibrary_pjio7")
}

[node name="anim2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pltvy")
}

[node name="collision" type="CollisionShape2D" parent="."]
show_behind_parent = true
shape = SubResource("CircleShape2D_b5qiu")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="centerSpell" type="Node2D" parent="."]
position = Vector2(0, -10)

[node name="spell" type="Node2D" parent="centerSpell"]
position = Vector2(0, -48)
script = SubResource("GDScript_8k5n3")

[node name="sprite" type="Sprite2D" parent="centerSpell/spell"]
texture = ExtResource("3_vu7w4")

[node name="CPUParticles2D" type="CPUParticles2D" parent="centerSpell/spell/sprite"]
amount = 128
lifetime = 0.5
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 50)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
color = Color(0.53125, 0.75, 0.4375, 1)
color_ramp = SubResource("Gradient_4ivth")

[node name="addHit" type="Area2D" parent="centerSpell/spell"]
visible = false
show_behind_parent = true
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="addHit" type="CollisionShape2D" parent="centerSpell/spell/addHit"]
shape = SubResource("CircleShape2D_8wvw7")
debug_color = Color(0.976471, 0, 0.423529, 0.184314)

[connection signal="body_entered" from="centerSpell/spell/addHit" to="centerSpell/spell" method="_on_areaHit_body_entered"]
